# spreadsheet-cleaner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  ROADMAP.md  SPEC.md  SpreadsheetCleaner.spec  installer.iss  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
basic/: glossary.md  guide_basic.md  spreadsheet_cleaner.py
docs/: ROADMAP.md  handoff_may11.md  index.html  mike_master_plan.md  mike_master_plan_detail.csv  mike_master_plan_onepager.txt  session_recap_may10_11.md
docs/archive/: session_notes_may10.md  spreadsheet_cleaner_project_handoff_may10.md
examples/: recordforge_roundtrip.md
sample_data/: create_sample.py  departments.csv  employees_target.yml  example_messy_dates.xlsx
spreadsheet_cleaner/: __init__.py  __main__.py  cli.py
spreadsheet_cleaner/clean/: __init__.py  changelog.py  recipe.py  steps.py
spreadsheet_cleaner/core/: __init__.py  io.py  models.py  types.py
spreadsheet_cleaner/profiling/: __init__.py  checks.py  columns.py
spreadsheet_cleaner/report/: __init__.py  clean_report.py  html.py  json_report.py  markdown.py  validate_report.py
spreadsheet_cleaner/ui/: __init__.py  app.py  ui.html
spreadsheet_cleaner/validate/: __init__.py  dedupe.py  reconcile.py  rules.py  schema.py
tests/: test_smoke.py
